<resources>
    <string name="app_name">AA Notification Forwarder</string>
    <string name="service_name">AA Notification Service</string>
    <string name="foreground_channel_name">AA Notification Forwarder Service</string>
    <string name="foreground_notification_text">Listening for notifications to forward to Android Auto</string>

    <!-- Test Notification -->
    <string name="test_notification_title">Test Notification</string>
    <string name="test_notification_message">This notification by AA Notification Forwarder should appear on Android Auto if connected.</string>
    <string name="test_notification_fab">Send test notification</string>

    <!-- Main screen -->
    <string name="permission_error">Read Notifications permission not granted! Click here to grant it in Settings app.</string>
    <string name="status_connected">Connected to Android Auto</string>
    <string name="status_disconnected">Disconnected from Android Auto</string>
    <string name="heading_settings">Settings</string>
    <string name="heading_settings_debug">Troubleshooting Settings</string>
    <string name="about_text">Version: %1$s\nhttps://github.com/ztNFny/AANotificationForwarder</string>

    <string name="pref_status_connection">pref_status_connection</string>
    <string name="status_connection">AA Connection</string>
    <string name="status_connection_true">Connected to Android Auto</string>
    <string name="status_connection_false">Disconnected from Android Auto</string>
    <string name="pref_status_notificationaccess">pref_status_notificationaccess</string>
    <string name="status_notificationaccess">Notification access</string>
    <string name="status_notificationaccess_true">Permission has been granted</string>
    <string name="status_notificationaccess_false">Read Notifications permission not granted! Click here to grant it in Settings app.</string>

    <!-- Preferences -->
    <string name="pref_appsToForward">pref_appsToForward</string>
    <string name="pref_title_appsToForward">Apps to forward</string>
    <string name="pref_summary_appsToForward">Selected applications notifications will be forwarded to Android Auto</string>

    <string name="pref_appsAutoDismiss">pref_appsAutoDismiss</string>
    <string name="pref_title_appsAutoDismiss">Apps to dismiss original notification</string>
    <string name="pref_summary_appsAutoDismiss">Selected applications original notification will be dismissed automatically after forwarding to Android Auto</string>

    <string name="pref_dismissInterval">pref_dismissInterval</string>
    <string name="pref_title_dismissInterval">Dismiss forwarded notification timeout</string>
    <string name="pref_summary_dismissInterval">Forwarded notification will be dismissed after X seconds. Only a short timeout should be required for Android Auto to show it, increase in case of problems. 0 = never.</string>
    <integer name="pref_min_dismissInterval">0</integer>
    <integer name="pref_max_dismissInterval">60</integer>
    <integer name="pref_default_dismissInterval">10</integer>

    <string name="pref_ignoreGroupSummaryNotifications">pref_ignoreGroupSummaryNotifications</string>
    <string name="pref_title_ignoreGroupSummaryNotifications">Ignore "Group Summary" notifications</string>
    <string name="pref_summary_ignoreGroupSummaryNotifications">Some apps sent 2 notifications for 1 with the second being a group summary notification. Enable to ignore those in case you get duplicate notifications.</string>
    <bool name="pref_default_ignoreGroupSummaryNotifications">true</bool>

    <string name="pref_minNotificationImportance">pref_minNotificationImportance</string>
    <string name="pref_title_minNotificationImportance">Minimum notification importance</string>
    <string name="pref_default_minNotificationImportance">1</string>
    <string-array name="pref_entries_minNotificationImportance">
        <item>All (including minimized)</item>
        <item>Silent and above</item>
        <item>Sound and above</item>
        <item>Urgent only (heads-up)</item>
    </string-array>
    <string-array name="pref_entryValues_minNotificationImportance">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string name="pref_schema_version">pref_schema_version</string>
    <string name="pref_ignoreNotificationTitle">pref_ignoreNotificationTitle</string>
    <string name="pref_title_ignoreNotificationTitle">Ignore notification titles</string>
    <string name="pref_summary_ignoreNotificationTitle">Ignore notifications if their title contains one of the specified strings. One entry per line.</string>
    <string name="pref_default_ignoreNotificationTitle">First text to ignore\nSecond text to ignore\nChecking Mail</string>

    <string name="pref_forwardWithoutAndroidAuto">pref_forwardWithoutAndroidAuto</string>
    <string name="pref_title_forwardWithoutAndroidAuto">Forward without Android Auto connected</string>
    <string name="pref_summary_forwardWithoutAndroidAuto">For testing purposes you might want to have this app forward notifications without Android Auto being connected.</string>
    <bool name="pref_default_forwardWithoutAndroidAuto">false</bool>

    <string name="pref_debugLogging">pref_debugLogging</string>
    <string name="pref_title_debugLogging">Debug logging</string>
    <string name="pref_summary_debugLogging">Enable debug logging to /sdcard/Android/media/xda.xlafbk.aanotificationforwarder/.</string>
    <bool name="pref_default_debugLogging">false</bool>

    <string name="pref_about_version">pref_about_version</string>
    <string name="heading_settings_about">Info</string>
    <string name="about_title_version">Version</string>
    <string name="about_title_url">Website</string>
    <string name="about_summary_url">https://github.com/ztNFny/AANotificationForwarder</string>

    <string-array name="empty" />
</resources>
