<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="xda.xlafbk.aanotificationforwarder.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.DayNight.ActionBar" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <TextView
            android:id="@+id/permissionError"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center"
            android:textSize="@dimen/statustext"
            android:text="@string/permission_error"
            android:visibility="gone"
            android:background="@color/status_error"/>
        <TextView
            android:id="@+id/connected"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:gravity="center"
            android:textSize="@dimen/statustext"
            android:visibility="gone"
            android:text="@string/status_connected"
            android:background="@color/status_connected"/>
        <TextView
            android:id="@+id/disconnected"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:gravity="center"
            android:textSize="@dimen/statustext"
            android:text="@string/status_disconnected"
            android:background="@color/status_disconnected" />
        <FrameLayout
            android:id="@+id/settings"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <TextView
            android:id="@+id/versioninfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/infotext"
            android:autoLink="web"
            android:linksClickable="true"  />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:tooltipText="@string/test_notification_fab"
        android:contentDescription="@string/test_notification_fab"
        app:srcCompat="@drawable/icon_small" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
